--- a/starWeibo/starWeibo/css/adminLogin.css
+++ b/starWeibo/starWeibo/css/adminLogin.css
@@ -4,7 +4,7 @@ ul,li{list-style: none;}
 a{text-decoration: none;}
 
 
-.main{width:100%;height: 100%;background-image: url("../images/bg.jpg");background-size: 100% 100%;position: absolute;}
+.main{width:100%;height: 100%;background-image: url("../images/adminbg.jpg");background-size: 100% 100%;position: absolute;}
 .content{width: 340px;height: 235px;border: 1px solid #eaeaea;margin-left: 550px;margin-top: 180px;box-shadow: 10px 10px 5px #1481B6;border-radius: 5px;}
 
 .content span{float: left;text-align: center;height: 36px;line-height: 36px;margin-top: 5px;margin-bottom: 5px;margin-left: 5px;font-family: 微软雅黑, 'Helvetica Neue', Helvetica, Arial, sans-serif;font-size: 14px;color: #fff;}
