--- a/starWeibo/starWeibo/css/adminManage.css
+++ b/starWeibo/starWeibo/css/adminManage.css
@@ -18,7 +18,7 @@ img{border: 0;}
 
 .welcome{margin-left: 10px;float: left;margin-top: 50px;margin-left: 1170px;color: #fff;}
 .user{float: left;margin-top: 50px;color: #fff;}
-.zhuxiao{color: #fff;cursor: pointer;float: right;margin-right: 15px;margin-top: 50px;font-weight: bold;}
+.zhuxiao{color: #fff;cursor: pointer;float: right;margin-right: 15px;margin-top: 45px;font-size:18px;;font-weight: bold;background-color:transparent;border:none;height:30px;width:50px;line-height:30px;text-align:center;outline:none;}
 
 .Report{height: 50px;text-align: center;line-height: 50px;border-radius: 5px;cursor: pointer;border: 1px solid #fff;margin-top: 5px;opacity: 1;font-size: 18px;color: #fff;background-color: #6398CD;border-right: none;}
 .Report:hover{opacity: 0.7;}
@@ -38,10 +38,10 @@ img{border: 0;}
 
 .ReportContent{height: 50px;background-color: #DAEAFA;line-height:23px;margin-top:2px;text-indent:2em;overflow-y:auto;}
 .ReportManage{height: 35px;}
-.hulue{float: right;height: 35px;line-height: 35px;padding-right: 10px;cursor: pointer;color: #5A98DE;font-weight: bold;}
-.Delete{float: right;height: 35px;line-height: 35px;padding-right: 10px;cursor: pointer;color: #5A98DE;font-weight: bold;}
-.jinyan{float: right;height: 35px;line-height: 35px;padding-right: 10px;cursor: pointer;color: #5A98DE;font-weight: bold;}
-
+.hulue{float: right;height: 35px;line-height: 35px;padding-right: 10px;cursor: pointer;color: #5A98DE;font-weight: bold;background-color:transparent;border:none;font-size:18px;outline:none;}
+.Delete{float: right;height: 35px;line-height: 35px;padding-right: 10px;cursor: pointer;color: #5A98DE;font-weight: bold;background-color:transparent;border:none;font-size:18px;outline:none;}
+.jinyan{float: right;height: 35px;line-height: 35px;padding-right: 10px;cursor: pointer;color: #5A98DE;font-weight: bold;background-color:transparent;border:none;font-size:18px;outline:none;}
+.yincang{display:none;}
 
 .UserManagesMain{height: 92%;background-color: #f2f4f6;position: relative;}
 .UserManagesContent{height: 89%;overflow-y: auto;}
