--- a/starWeibo/starWeibo/css/focus.css
+++ b/starWeibo/starWeibo/css/focus.css
@@ -29,6 +29,7 @@
 .FocusList{width: 770px;display:inline-block;min-height: 30px; padding-top: 20px;}
 .FocusCard{ width: 230px; height: 100px; border: 2px solid #f3f3f3; border-radius: 3px; cursor: pointer; padding: 8px; float: left; margin-right: 6px; margin-top: 10px; box-shadow: 1px 1px 1px 1px #ddd; position: relative;}
 .FocusCard:hover{ border: 2px solid #f48c12;}
+.fanimg { width:50px;height:50px;}
 .GroupCard{display: none;width: 300px;border: 1px solid #ccc; border-radius: 3px; background-color:#fff; position: absolute; top: 60px;padding: 10px; padding-bottom:20px; z-index:100;}
 .GroupCardT{width: 300px;height: 20px; font-size: 12px;}
 .GroupCardM{width: 300px;display: inline-block;}
