--- a/starWeibo/starWeibo/css/homePage.css
+++ b/starWeibo/starWeibo/css/homePage.css
@@ -196,7 +196,7 @@ em{font-style: normal;font-weight: normal;}
 .wfaceradius img{width: 50px;height: 50px;}
 .wbdetail{margin-left: 65px;}
 .wbname{font-size: 14px;font-weight: bold;line-height: 16px;}
-.wbtext{font-size: 14px;line-height: 23px;padding: 4px 0 4px;}
+.wbtext{font-size: 14px;line-height: 23px;padding: 4px 0 4px; min-width:495px;}
 .wbtext .wbmedialist{padding: 0 0 10px;margin-right: -20px;}
 .wbtext .wbmedialist li{display: inline;margin: 0 9px 0 0;vertical-align: top;}
 .wbtext .lostpicmedia{display: inline-block;vertical-align: top;overflow: hidden;}
