--- a/starWeibo/starWeibo/css/adminManage.css
+++ b/starWeibo/starWeibo/css/adminManage.css
@@ -82,4 +82,4 @@ td a:hover{text-decoration: underline;}
 
 .SendMain{height: 84.5%;padding-top: 50px;}
 .SendContent{height: 66%;width: 900px;margin-left: 100px;border: 1px solid #ccc;}
-.SendButton{width: 70px;height: 35px;border-radius: 5px;border: 1px solid #ccc;line-height: 35px;text-align: center;cursor: pointer;margin-left: 930px;margin-top: 10px;}
+.SendButton{width: 70px;height: 35px;border-radius: 5px;border: 1px solid #ccc;line-height: 35px;text-align: center;cursor: pointer;margin-left: 930px;margin-top: 10px;color:#fff;background-color:#1C8CF9;}
