--- a/starWeibo/starWeibo/css/register.css
+++ b/starWeibo/starWeibo/css/register.css
@@ -16,10 +16,10 @@ img{border:0;}
 
 /*.image_code{width:110px;height: 36px;margin-left: 5px;background-image: url("images/imgcode (1).png");float: left;}*/
 
-.check{width: 350px;height: 23px;margin-left: 80px;display: block;}
+.check{width: 350px;height: 23px;margin-left: 80px;display: block;margin-top:50px;}
 .check1{width:242px;height: 51px; background-image: url("images/btn_register.png");background-repeat: no-repeat;margin-left: 80px;cursor: pointer;}
 .tishi{display:none; height: 50px;width: 160px; font-size: 14px;color: red; padding-top: 5px;padding-left: 10px;float: left;}
-.finishzhuce{width: 200px;height:45px;background-color: orange;text-align: center;line-height: 40px;margin: 20px 0 0 80px;}
+.finishzhuce{width: 200px;height:45px;background-color: orange;text-align: center;line-height: 40px;margin: 20px 0 0 80px;cursor:pointer;}
 .finishzhuce a{color: white;font-size: 22px;text-decoration: none;}
 
 .register-know{width: 310px;height: 450px;border-left: 1px solid #ddd;float: right; }
@@ -33,4 +33,5 @@ p{padding: 10px 0 10px 20px;}
 .reg_help a:hover{text-decoration: underline;}
 .help_more {margin:16px 0 0 25px;width: 55px;height: 22px;}
 
-
+.yincang{display:none;}
+.yanzheng{border:1px solid #333;height:30px;width:180px;margin-left:98px;text-align:center;line-height:30px;border-radius:5px;cursor:pointer;}
