--- a/starWeibo/starWeibo/css/personalCenter.css
+++ b/starWeibo/starWeibo/css/personalCenter.css
@@ -39,6 +39,7 @@ ul,li{ list-style: none; list-style-position: outside; }
 .pf_head { position: absolute; top: -108px; left: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.3);}
 .pf_head_pic{ padding: 2px; width: 180px; height: 180px; position: relative;}
 .pf_head_pic img{ width: 180px; height: 180px;}
+.pf_head_pic .change_btn_div{ position: absolute; text-align: right; right: 12px; bottom: 12px; display:none;}
 .user_atten{ margin: 5px 0 4px 0; border: 0; padding: 0; line-height: 1.125; width: 184px;}
 .user_atten li { padding: 0 3px 3px; float: left; border-right-width: 1px; border-right-style: solid; text-align: center; width: 53px;}
 .user_atten li strong { line-height: 20px; display: block; margin-bottom: 5px; font-family: Tahoma; font-weight: 400; }
@@ -62,7 +63,7 @@ ul,li{ list-style: none; list-style-position: outside; }
 .S_txt1{ color: #333; text-decoration: none;}
 
 /***********内容区**********/
-.W_profile_main { min-height: 300px;}
+.W_profile_main { min-height: 300px; position:relative;}
 .pIleft{ width: 450px; padding: 20px; float: left;}
 .pIright{ width: 450px; height: 50px; padding:20px 20px 20px 0; float: left;}
 #baseInfo{ width: 100%; color: #333;}
@@ -78,8 +79,8 @@ ul,li{ list-style: none; list-style-position: outside; }
 .W_ico16{ display: inline-block; width: 16px; height: 16px; background: url("images/personalCenterimages/icon.png") no-repeat -75px -150px; vertical-align: middle;}
 .W_ico16:hover{ background: url("images/personalCenterimages/icon.png") no-repeat -100px -150px;}
 .W_error{ color: #f00;}
-.W_input { width: 195px; border: 1px solid #ccc; border-radius: 2px; height: 28px; padding: 0 0 0 2px; vertical-align: middle; color: #808080; -webkit-box-shadow: 0px 1px 1px 0px #eaeaea inset; -moz-box-shadow: 0px 1px 1px 0px #eaeaea inset; box-shadow: 0px 1px 1px 0px #eaeaea inset; outline-style: none;}
-.status{ position: absolute; left: 290px; top: 1px;}
+.W_input { width: 180px; border: 1px solid #ccc; border-radius: 2px; height: 28px; padding: 0 0 0 2px; vertical-align: middle; color: #808080; -webkit-box-shadow: 0px 1px 1px 0px #eaeaea inset; -moz-box-shadow: 0px 1px 1px 0px #eaeaea inset; box-shadow: 0px 1px 1px 0px #eaeaea inset; outline-style: none;}
+.status{ position: absolute; left: 270px; top: 1px;}
 .W_tips { font-size: 12px; overflow: hidden; padding: 5px 7px 4px 10px; _width: auto;}
 .W_tips .icon { float: left; width: 16px; margin-right: 3px; _margin-right: 0; vertical-align: -3px; }
 .tips_del{ border: 1px solid #FFD9BB; background: #FFF7F5; line-height: 12px; color: #666; }
@@ -88,6 +89,8 @@ ul,li{ list-style: none; list-style-position: outside; }
 .icon_succS{ background-position: 0 0; }
 .pf_item .rsp { margin-right: 10px; }
 .W_radio { vertical-align: -2px; _vertical-align: -3px; margin-right: 3px; }
-textarea.W_input { height: 44px; line-height: 22px; overflow-y: auto; overflow-x: hidden; padding: 5px 0 0 2px; border: 1px solid #ccc; border-radius: 2px; vertical-align: middle; color: #808080; -webkit-box-shadow: 0px 1px 1px 0px #eaeaea inset; -moz-box-shadow: 0px 1px 1px 0px #eaeaea inset; box-shadow: 0px 1px 1px 0px #eaeaea inset; resize: none;}
+textarea.W_input { width: 195px; height: 44px; line-height: 22px; overflow-y: auto; overflow-x: hidden; padding: 5px 0 0 2px; border: 1px solid #ccc; border-radius: 2px; vertical-align: middle; color: #808080; -webkit-box-shadow: 0px 1px 1px 0px #eaeaea inset; -moz-box-shadow: 0px 1px 1px 0px #eaeaea inset; box-shadow: 0px 1px 1px 0px #eaeaea inset; resize: none;}
 .con a{ color:#0a8cd2; vertical-align: middle;}
 .con p{ padding:0; line-height:30px;}
+.txt{ line-height:24px;}
+.saveInfo{ display:none; width:100px; height:30px; background-color:#ffffff; padding:10px; border:5px solid #eaeaea; border-radius:5px; position:absolute; left:50%; margin-left:-55px; top:70px; z-index:100;}
