--- a/starWeibo/starWeibo/css/focus.css
+++ b/starWeibo/starWeibo/css/focus.css
@@ -33,12 +33,12 @@
 .GroupCard{display: none;width: 300px;border: 1px solid #ccc; border-radius: 3px; background-color:#fff; position: absolute; top: 60px;padding: 10px; padding-bottom:20px; z-index:100;}
 .GroupCardT{width: 300px;height: 20px; font-size: 12px;}
 .GroupCardM{width: 300px;display: inline-block;}
-.GroupCardMLi{width: 140px; height: 20px;display: block;float: left; margin-top: 5px;}
+.GroupCardMLi{width:140px;height: 20px;display: block; margin-top: 5px; float:left;}
 .GroupCheck{ float: left; display: block; cursor: pointer;}
 .GroupName{width: 100px;height: 20px; font-size: 12px; float: left; padding-left: 10px; color: #999;}
-.BtnSureGroup {width:200px; height:30px;}
-.BtnSureGroupIn{width:80px;height: 30px; float:right; font-size: 14px; line-height: 30px; border-radius: 2px; border:1px solid #eee; text-align: center; cursor: pointer; background-color:rgb(255, 162, 16);}
-.GroupCardB{width: 80px; height: 20px; font-size: 12px;color:#0a8cd2;}
+.BtnSureGroup {width:200px; height:40px;}
+.BtnSureGroupIn{float:left; width:80px;height: 30px;font-size: 14px; line-height: 30px; border-radius: 2px; border:1px solid #eee; text-align: center; cursor: pointer; background-color:rgb(255, 162, 16);}
+.GroupCardB{width: 80px; height: 20px; font-size: 12px;color:#0a8cd2; float:left; margin-top:10px;}
 .FocusCardS{ width: 230px;height:60px; }
 .HeadImg{width: 50px; height: 50px; float: left;}
 .FCardinfo{width: 170px; height: 50px;background-color: #fff;padding-left: 10px; float: left;}
