--- a/starWeibo/starWeibo/css/personalCenter.css
+++ b/starWeibo/starWeibo/css/personalCenter.css
@@ -5,7 +5,7 @@ a{ text-decoration: none; cursor: pointer; color: #0a8cd2;}
 ul,li{ list-style: none; list-style-position: outside; }
 
 .maintitle{ z-index:9999;}
-.W_main{ padding-top:0;}
+.W_main{ padding-top:0; position:relative;}
 #main{ width: 980px; margin: 0 auto; padding-top: 40px; background-color: #ffffff;}
 
 /************header区*************/
@@ -94,3 +94,18 @@ textarea.W_input { width: 195px; height: 44px; line-height: 22px; overflow-y: au
 .con p{ padding:0; line-height:30px;}
 .txt{ line-height:24px;}
 .saveInfo{ display:none; width:100px; height:30px; background-color:#ffffff; padding:10px; border:5px solid #eaeaea; border-radius:5px; position:absolute; left:50%; margin-left:-55px; top:70px; z-index:100;}
+#uploadSec{ width:600px; height:500px; background-color:#ffffff; padding:0 10px 10px 10px; border:5px solid #eaeaea; border-radius:5px; position:absolute; left:50%; margin-left:-315px; top:100px;}
+.upload,.fileBtn{ padding:5px 20px; margin-left:20px; cursor:pointer; display:inline-block; background-color:#666; border-radius:5px; height:20px; line-height:20px; color:#fff; text-align:center; font-size:14px; font-weight:bold; vertical-align:top;}
+.upload:hover{ background-color:#d9d9d9;}
+.exitBtn{ width:40px; height:40px; cursor:pointer; text-align:center; line-height:40px; font-size:30px; color:#666; font-weight:bold; position:absolute; top:0; right:0;}
+.exitBtn:hover{ background-color:#f2f2f2; color:#0a8cd2;}
+#showImage{ width:600px; height:400px; background-color:#f2f2f2;}
+.originalImageArea{ width:400px; height:400px; float:left;}
+#originalImg{ max-width:400px; max-height: 400px; min-width:200px; min-height: 200px;}
+.showImageRight{ width:200px; height:400px; float:left;}
+.showImageRight p{ height:30px; line-height:30px; font-size:18px; font-weight:bold; color:#0a8cd2; text-align:center; margin:10px auto 10px auto;}
+.previewArea{ width:150px; height:150px; margin:0 0 20px 25px; position:relative; overflow:hidden; float:left;}
+#previewImg{ position:absolute;}
+.ensureBtn{ height:30px; line-height:30px; display:inline-block; margin:10px 0 0 52px; cursor:pointer; padding:0 10px; border-radius:7px; font-size:18px; font-weight:bold; color:#fff; text-align:center; background-color:#ccc;}
+.ensureBtn:hover{ background-color:#d9d9d9; color:#0a8cd2;}
+.menban{ width:980px; height:100%; background-color:rgba(0,0,0,0.7); position:fixed; z-index:999999; display:none;}
