--- a/starWeibo/starWeibo/css/homePage.css
+++ b/starWeibo/starWeibo/css/homePage.css
@@ -227,6 +227,7 @@ em{font-style: normal;font-weight: normal;}
 .wbfrom .hover{visibility: hidden;}
 .wbmediaexpand{border-width: 1px;border-style: solid;padding: 10px 20px 10px;margin: 5px 0 15px;border-radius: 3px;}
 .wbarrow{z-index: 1;margin: -18px -20px 0;float:right; width: 22px;cursor: default;}
+.swfun2 .wbarrow {float:left; margin: -18px 0px 0;}
 .wbfeed .wbarrow em,.wbfeed .wbarrow span{font-family: "SimSun";overflow: hidden;font-size: 12px;line-height: 1.231;display: block;height: 12px;}
 .line1c{color: #d9d9d9;}
 .wbarrow span{margin: -11px 0 0;}
