--- a/starWeibo/starWeibo/css/detailmessage.css
+++ b/starWeibo/starWeibo/css/detailmessage.css
@@ -44,9 +44,11 @@ a{text-decoration: none;color: #333;}
 /*msg_dialogue部分*/
 
 .msg_dialogue {
+    overflow:auto;
     margin-top: 25px;
     padding: 0px 20px;
     line-height: 22px;
+    height:650px;
 }
 .msg_time_line {
     margin: 5px 65px 25px;
