--- a/starWeibo/starWeibo/css/homePage.css
+++ b/starWeibo/starWeibo/css/homePage.css
@@ -113,7 +113,7 @@ em{font-style: normal;font-weight: normal;}
 .key a{margin-left: 10px;}
 .sendweibo .input{background-color: #FFFFFF;border-style: solid;border-width: 1px;box-shadow: 1px 1px 1px 0px #eaeaea inset;border-color: #cccccc;height: 88px;position: relative;border-radius: 3px;margin: 15px 0 0;}
 .inputdetail{background: transparent;width: 544px;height: 74px;margin: 2px 0px 0px 2px;padding: 5px;border-style: none;border-width: 0px;font-size: 14px;font-family: Tahoma, 宋体;word-wrap: break-word;line-height: 18px;overflow-y: auto;overflow-x: hidden;outline: none;}
-.input .arrow{background-position: -475px 0;background-image: url("images/all_iconbtn.png");background-repeat: no-repeat;display: block;width: 11px;height: 19px;position: absolute;top: 19px;left: 552px;}
+.input .arrow{background-position: -475px 0;background-image: url("images/all_iconbtn.png");background-repeat: no-repeat;display: block;width: 11px;height: 19px;position: absolute;top: 19px;left: 558px;}
 .sendweibo .func{float: right;padding: 5px 0 0;text-align: right;width: 170px;white-space: nowrap;}
 .limits{display: inline-block;margin: 6px 10px 0 0;vertical-align: top;}
 .limits .wautocut{display: inline-block;width: 62px;cursor: pointer;text-align: right;}
@@ -192,7 +192,7 @@ em{font-style: normal;font-weight: normal;}
 .wbscreen .iconchoose{visibility: hidden;}
 .iconchoose{width: 16px;height: 16px;background-position: -75px -75px;}
 .wico12{display: inline-block;width: 12px;height: 12px;background-image: url("images/icon.png");background-repeat: no-repeat;}
-.wbfeeddetail{border-bottom-width: 1px;border-bottom-style: solid;padding: 20px 0 11px;overflow: hidden;}
+.wbfeeddetail{border-bottom-width: 1px;border-bottom-style: solid;padding: 20px 0 11px;overflow: hidden;width:560px; }
 .wbface{float: left;width: 50px;position: relative;}
 .wbface .wfaceradius{height: 50px;display: block;overflow: hidden;}
 .wfaceradius{border-radius: 2px;}
@@ -226,6 +226,7 @@ em{font-style: normal;font-weight: normal;}
 .link2{color: #6cbae4}
 .wbfrom .hover{visibility: hidden;}
 .wbmediaexpand{border-width: 1px;border-style: solid;padding: 10px 20px 10px;margin: 5px 0 15px;border-radius: 3px;}
+.wbmediaexpand .listcontent .wbtext em{width: 460px;display:block; }
 .wbarrow{z-index: 1;margin: -18px -20px 0;float:right; width: 22px;cursor: default;}
 .swfun2 .wbarrow {float:left; margin: -18px 0px 0;}
 .wbfeed .wbarrow em,.wbfeed .wbarrow span{font-family: "SimSun";overflow: hidden;font-size: 12px;line-height: 1.231;display: block;height: 12px;}
@@ -422,9 +423,9 @@ dd {display: block;}
 .contte{width: 420px;height: 45px;border:1px solid rgb(204, 204, 204);background-color: #fff;-webkit-box-shadow: rgb(234, 234, 234) 0px 1px 1px 0px inset;outline: 0px;resize:none;padding:10px; }
 .contbom{padding-top: 30px;width: 440px;height:28px; }
 .concwbrzfbtn{width: 60px;height: 28px;border: 1px solid rgb(255, 155, 1);line-height: 28px;text-align: center;background-image:  -webkit-linear-gradient(top, rgb(255, 184, 71) 0%, rgb(255, 162, 16) 100%);color: #fff;float: right;border-radius: 3px;cursor: pointer;}
+.zfdisable {display:none;}
 
-
-.W_pages{float:right;display:none;padding-right:10px;}
+.W_pages{float:right;display:block;padding-right:10px;}
 .pre {float:left;background-color:#fafafa; width:60px; height:30px;padding-top:10px; text-align:center;font-family:'Microsoft YaHei';font-size:12px;line-height:30px;}
 .next{float:left;background-color:#fafafa; width:60px; height:30px;padding-top:10px; text-align:center;font-family:'Microsoft YaHei';font-size:12px;line-height:30px;}
 .pagebox {  background-color:#fafafa; width:60px; height:30px; float:left; position:relative;text-align:center;font-family:'Microsoft YaHei';font-size:12px;line-height:30px;z-index:1;padding-top:10px;}
@@ -432,3 +433,21 @@ dd {display: block;}
 .everypages {display:block; width:60px; height:30px;background-color:#e6e6e6;border-bottom:1px solid #e6e6e6;cursor:pointer;}
 .curpage { width:60px; height:30px;text-align:center;font-family:'Microsoft YaHei';font-size:12px;line-height:30px;cursor:pointer; }
 .everypages:hover { background-color:#fafafa;}
+
+
+/*个人信息*/
+.W_main_r {position:relative; height:200px;}
+.S_bg4{ background-color: #fafafa;}
+.S_line1{ border-color: #d9d9d9;}
+.pf_head { position: absolute; top: 10px; left: 25px; box-shadow: 0 2px 4px rgba(0,0,0,0.3);}
+.pf_head_pic{ padding: 2px; width: 180px; height: 180px; position: relative;}
+.pf_head_pic img{ width: 180px; height: 180px;}
+.pf_head_pic .change_btn_div{ position: absolute; text-align: right; right: 12px; bottom: 12px; display:none;}
+.user_atten{ margin: 5px 0 4px 0; border: 0; padding: 0; line-height: 1.125; width: 184px;}
+.user_atten li { padding: 0 3px 3px; float: left; border-right-width: 1px; border-right-style: solid; text-align: center; width: 53px;}
+.user_atten li strong { line-height: 20px; display: block; margin-bottom: 5px; font-family: Tahoma; font-weight: 400; }
+.user_atten_l li strong { font-size: 20px; }
+.S_func1{ color: #333; text-decoration: none;}
+.S_func1:hover{ color: #0a8cd2;}
+.follower{ width: 64px; padding: 0 0 3px 0;}
+.user_atten .W_no_border{ border: 0;}
