--- a/starWeibo/starWeibo/css/forgetpwd.css
+++ b/starWeibo/starWeibo/css/forgetpwd.css
@@ -8,7 +8,7 @@ input{outline: none;}
 .tubiao{width:100px;height: 50px;margin-top: 20px;border: 1px solid #ccc;margin-left:230px;}
 .form{width: 900px;height: 450px;margin: 10px auto;border: 1px solid #ccc;border-top: 2px solid #ff9000;}
 .title{width: 860px;height: 40px;text-align: left;line-height: 40px;font-size: 20px;padding-left: 40px;border-bottom: 2px solid #ff9000;}
-.mod-sub-nav{width: inherit;height: 36px;background:url("../images/mod_sub_nav.png") no-repeat scroll 0px 0px transparent;margin: 30px 0px 20px;color: #418dda;font: 16px/36px 微软雅黑,黑体；}
+.mod-sub-nav{width: inherit;height: 36px;background:url("../images/forget/mod_sub_nav.png") no-repeat scroll 0px 0px transparent;margin: 30px 0px 20px;color: #418dda;font: 16px/36px 微软雅黑,黑体；}
 .mod-sub-nav li{float: left;}
 .mod-sub-list1{width: 190px;padding-left: 56px;}
 .mod-sub-list2{width: 202px;padding-left: 56px;}
