--- a/starWeibo/starWeibo/css/forgetpwd.css
+++ b/starWeibo/starWeibo/css/forgetpwd.css
@@ -2,7 +2,7 @@
 img{border: 0px}
 ul,li{list-style: none;}
 a{text-decoration: none;}
-body{font-family: '微软雅黑';font-size: 12px;}
+body{font-family: '微软雅黑';font-size: 12px;position:relative;}
 input{outline: none;}
 
 .tubiao{width:100px;height: 50px;margin-top: 20px;border: 1px solid #ccc;margin-left:230px;}
@@ -46,9 +46,19 @@ input{outline: none;}
 
 .pass-button-submit2{height: 34px;width: 109px;color: #fff;cursor: pointer;text-align: center;border: 0px none;background-image: url("../images/forget/button_icon.png");line-height: 32px;margin-top: 20px;margin-left:100px;}
 
+.tanchu{width:200px;height:100px;position:absolute;top:220px;border:1px solid #333;left:580px;display:none;}
+.tanchuTop{width:200px;height:30px;margin-top:0 auto;background-color:#418dda;}
+.tanchuBtm a{line-height:70px;font-size:16px;text-align:center;display:block;font-weight:bold;color:#418dda;}
 
 
+.tanchu1{width:200px;height:100px;position:absolute;top:220px;border:1px solid #333;left:580px;display:none;}
+.tanchu1Top{width:200px;height:30px;margin-top:0 auto;background-color:#418dda;}
+.tanchu1Btm a{line-height:70px;font-size:16px;text-align:center;display:block;font-weight:bold;color:#418dda;}
 
+
+.tanchu2{width:200px;height:100px;position:absolute;top:220px;border:1px solid #333;left:580px;display:none;}
+.tanchu2Top{width:200px;height:30px;margin-top:0 auto;background-color:#418dda;}
+.tanchu2Btm a{line-height:70px;font-size:16px;text-align:center;display:block;font-weight:bold;color:#418dda;}
 
 
 
