--- a/starWeibo/starWeibo/css/personalCenter.css
+++ b/starWeibo/starWeibo/css/personalCenter.css
@@ -94,7 +94,7 @@ textarea.W_input { width: 195px; height: 44px; line-height: 22px; overflow-y: au
 .con a{ color:#0a8cd2; vertical-align: middle;}
 .con p{ padding:0; line-height:30px;}
 .txt{ line-height:24px;}
-.saveInfo{ display:none; width:100px; height:30px; background-color:#ffffff; padding:10px; border:5px solid #eaeaea; border-radius:5px; position:absolute; left:50%; margin-left:-55px; top:70px; z-index:100;}
+.saveInfo,.updateInfo{ display:none; width:100px; height:30px; background-color:#ffffff; padding:10px; border:5px solid #eaeaea; border-radius:5px; position:absolute; left:50%; margin-left:-55px; top:70px; z-index:200;}
 #uploadSec{ width:600px; height:500px; background-color:#ffffff; padding:0 10px 10px 10px; border:5px solid #eaeaea; border-radius:5px; position:absolute; left:50%; margin-left:-315px; top:100px;}
 .upload,.fileBtn{ padding:5px 20px; margin-left:20px; cursor:pointer; display:inline-block; background-color:#666; border-radius:5px; height:20px; line-height:20px; color:#fff; text-align:center; font-size:14px; font-weight:bold; vertical-align:top;}
 .upload:hover{ background-color:#d9d9d9;}
@@ -109,4 +109,16 @@ textarea.W_input { width: 195px; height: 44px; line-height: 22px; overflow-y: au
 #previewImg{ position:absolute;}
 .ensureBtn{ height:30px; line-height:30px; display:inline-block; margin:10px 0 0 52px; cursor:pointer; padding:0 10px; border-radius:7px; font-size:18px; font-weight:bold; color:#fff; text-align:center; background-color:#ccc;}
 .ensureBtn:hover{ background-color:#d9d9d9; color:#0a8cd2;}
-.menban{ width:980px; height:100%; background-color:rgba(0,0,0,0.7); position:fixed; z-index:999999; display:none;}
+.menban,.menban2{ width:980px; height:100%; background-color:rgba(0,0,0,0.5); position:fixed; z-index:999999; display:none;}
+#updatePwdArea{ width: 543px; height: 255px; background-image: url("images/personalCenterimages/loginkuang.png"); position:absolute; left:50%; margin-left:-272px; top:150px; z-index:100;}
+.pwdContainer{ width: 320px; height: 180px; display: block; padding: 37px 111px; position: relative;}
+.remindInfo{ width: 320px; height: 20px; display: block; line-height: 20px; color: #ff4a00; text-align: center; font-size: 14px; position: absolute; top: 18px; left: 115px; }
+.row{ width: 100%; height: 27px; padding: 15px 0 0 20px;}
+.row label{ width: 25%; height: 15px; font-size: 15px; line-height: 15px; color: #000; padding: 6px 0; text-align: center; display: block; float: left; }
+.inputContainer{ float: left; width: 140px; height: 25px; line-height: 25px; margin-left: 16px; border: 1px solid #ccc; padding-left: 5px; background-color: #FFFFFF;}
+#oldPwd,#newPwd,#inputAgain{ width: 135px; height: 22px; outline: none; border:0;}
+.remindIcon{ width: 25px; height: 25px;}
+.oldPwdRemind,.newPwdRemind,.inputAgainRemind{ width: 25px; height: 25px; display: none; float: left; padding-left: 10px;}
+.operator{ width: 280px; height: 36px; padding: 20px; }
+#ensure,#cancel{ width: 112px; height: 34px; padding: 1px 6px; border-radius:7px; font-size: 16px; font-weight:bold; text-decoration: none; line-height: 34px; text-align: center; background-color:#99DD20; color:#fff; float: left; cursor: pointer;}
+#cancel{ float:right;}
