--- a/starWeibo/starWeibo/css/playstar.css
+++ b/starWeibo/starWeibo/css/playstar.css
@@ -6,7 +6,7 @@ a{text-decoration: none;color: #333;}
 .W_main{width: 980px;margin: 0 auto;}
 .main_inner{background-color:#fff;background: url("../images/repeat_bg_yg.png") repeat-y;}
 .W_main_l{float: left;width: 150px;overflow: hidden;padding: 12px 0 30px;}
-.W_main_a{height: 872px;}
+.W_main_a{min-height: 872px;}
 .W_main_c{float: left;width: 600px;min-height: 800px;overflow: hidden;padding: 22px 0 50px;}
 .W_main_r{float: left;width: 230px;overflow: hidden;padding: 30px 0;}
 .group_read{width: 560px;height: 34px;margin: 0 auto;line-height: 34px;border-bottom: 2px solid #ea1429;font-weight: normal;font-size: 14px;}
@@ -69,3 +69,9 @@ a{text-decoration: none;color: #333;}
 .SetNote{width:50px;height: 20px;color:#0a8cd2;font-size:12px;}
 .SetNote:hover{ text-decoration: underline;}
 .personalInfo{width: 170px;height:15px; font-size: 12px; color: #777;}
+
+
+
+/*弹窗*/
+.Tanchu{width:90px;height:45px;position:fixed;left:620px;top:350px;text-align:center;line-height:45px;font-weight:bold;border:3px solid #6cbae4;border-radius:5px;color:#aaa;display:none;z-index:999;}
+.Tanchu1{width:90px;height:45px;position:fixed;left:620px;top:350px;text-align:center;line-height:45px;font-weight:bold;border:3px solid #6cbae4;border-radius:5px;color:#aaa;display:none;z-index:999;}
