--- a/starWeibo/starWeibo/css/outbox.css
+++ b/starWeibo/starWeibo/css/outbox.css
@@ -55,7 +55,7 @@ a{text-decoration: none;color: #333;}
 .face{float: left;}
 .face img{width: 50px;height: 50px;}
 .comment{float: left;width: 465px;margin-left: 15px;position: relative;line-height: 21px;}
-.comm_box{padding: 15px 20px;border: 1px solid #d9d9d9;border-radius: 2px;background-color: #f2f2f2;}
+.comm_box{padding: 15px 20px;border: 1px solid #d9d9d9;border-radius: 2px;background-color: #f2f2f2;min-height:50px;}
 .comm_box a{color: #0a8cd2;margin:0;}
 .comm_box span{color: #808080;}
 .lev2-curr {background-color:#ccc;}
